# numpy_random_api

./: README.md  pyproject.toml
.github/workflows/: release.yml
numpy_random_api/: dist.py  keys.py  philox.py  prng.py  random.py
random_api_numpy/: _random.py  random.py
