[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "numpy_random_api"
description = "Functional random number generation for NumPy"
readme = "README.md"
license = "MIT"
authors = [
    {name = "Nicolas Tessore", email = "n.tessore@ucl.ac.uk"},
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
requires-python = ">=3.9"
dynamic = ["version"]
dependencies = [
    "numpy",
]

[project.optional-dependencies]
doc = [
    "furo",
    "sphinx",
]
test = [
    "pytest",
    "pytest-cov",
]

[project.urls]
Repository = "https://github.com/ntessore/numpy_random_api"
Issues = "https://github.com/ntessore/numpy_random_api/issues"

[tool.hatch.version]
source = "vcs"

[tool.pytest.ini_options]
addopts = "--doctest-modules"
doctest_optionflags = "ELLIPSIS NORMALIZE_WHITESPACE IGNORE_EXCEPTION_DETAIL"
